--- a/index.html
+++ b/index.html
@@ -193,34 +193,102 @@
     </section>
     <!-- İlgi Alanlarım bitiş-->
 
+   
     <!-- Contact başlangıc-->
     <section class="contact">
+        <h1 class="heading">Benimle <span>İletişim</span></h1>
        <div class="row">
-             <h1 class="heading">Benimle <span>İletişim</span></h1>
+             
                  <form>
                  <h3> İletişim Bilgileri </h3>
                 <div class="inputBox">
                     <i class="fas fa-user"></i>
-                    <input type="text" placeholder="name"/>
+                    <span> İsim:</span>
+                    <input type="text" placeholder="isim"/>
                 </div>
 
                 <div class="inputBox">
                     <i class="fas fa-envelope"></i>
-                    <input type="text" placeholder="name"/>
+                    <span> Mail:</span>
+                    <input type="email" placeholder="mail"/>
                 </div>
 
                 <div class="inputBox">
                     <i class="fas fa-phone"></i>
-                    <input type="text" placeholder="name"/>
+                    <span> Telefon:</span>
+                    <input type="number" placeholder="telefon"/>
                 </div>
+                <input type="submit" class="btn" value="İletişime Geç">
                 </form>
        </div> 
+    </section>
 
+    <!-- Contact bitiş-22--->
+
+   
+    <section class="cv">
+        <h1 class="heading"> Admin <span>Hakkında</span></h1>
+        <div class="content">
+            <h2>Özgeçmiş / CV</h2>
+            <ul>
+                <li><strong>Ad:</strong> [Adınız]</li>
+                <li><strong>Soyad:</strong> [Soyadınız]</li>
+                <li><strong>Doğum Tarihi:</strong> [Doğum Tarihi]</li>
+                <li><strong>Telefon:</strong> [Telefon Numarası]</li>
+                <li><strong>E-posta:</strong> [E-posta Adresi]</li>
+                <li><strong>Adres:</strong> [Adresiniz]</li>
+                <li><strong>Eğitim:</strong>
+                    <ul>
+                        <li><strong>Lisans:</strong> [Lisans Programı], [Üniversite Adı], [Mezuniyet Yılı]</li>
+                        <li><strong>Yüksek Lisans:</strong> [Yüksek Lisans Programı], [Üniversite Adı], [Mezuniyet Yılı]</li>
+                        <li><strong>Doktora:</strong> [Doktora Programı], [Üniversite Adı], [Mezuniyet Yılı]</li>
+                    </ul>
+                </li>
+                <li><strong>İş Deneyimi:</strong>
+                    <ul>
+                        <li>[İş Deneyimi 1]: [Pozisyon], [Şirket Adı], [Çalışma Tarihi]</li>
+                        <li>[İş Deneyimi 2]: [Pozisyon], [Şirket Adı], [Çalışma Tarihi]</li>
+                        <li>[İş Deneyimi 3]: [Pozisyon], [Şirket Adı], [Çalışma Tarihi]</li>
+                    </ul>
+                </li>
+            </ul>
+
+        </div>
+    </section>
+    <!-- Özgeçmiş bit--> 
+
+
+
+    <!-- Footer Bölümü -->
+    <section class="footer">
+        <div class="search">
+            <input type="text"
+            class="search-input" placeholder="Search"/>
+            <button class="btn btn-primary">Search</button>
+        </div>
+
+        <div class="share">
+            <a href="#" class="fab fa-github"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-linkedin"></a>
+        </div>
+
+        <div class="link">
+            <a href="#" class="active" >Ana Menu</a>
+            <a href="#" > Özgeçmiş </a>
+            <a href="#" > Şehrim </a>
+            <a href="#" > İlgi Alanlarım </a>
+            <a href="#" > İletişim </a>
+            <a href="#" > Hakkımda </a>
+        </div>
+
+        <div class="credit">
+            Created by <span>M.Fatih Karataş</span> | all rights reserved
+        </div>
 
 
     </section>
 
-    <!-- Contact bitiş-22->
 
 
 </body>
