--- a/about.html
+++ b/about.html
@@ -59,23 +59,22 @@
         <h1 class="heading">İlgi <span>Alanlarım</span></h1>
         <div class="row">
             <div class="image">
-                <img src="images/logo.jpg" alt="about">
+                <img src="images/hobby.jpg" alt="about">
             </div>
             <div class="content"> 
-                <h3> İlgi Alanlarım Neler</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Expedita nisi magni voluptates fugit non totam! At nulla rem repellat officia labore,
-                      maiores quam, itaque odit deleniti atque officiis ullam excepturi.
-                    </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Expedita nisi magni voluptates fugit non totam! At nulla rem repellat officia labore,
-                         maiores quam, itaque odit deleniti atque officiis ullam excepturi.
-                       </p>    
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Expedita nisi magni voluptates fugit non totam! At nulla rem repellat officia labore,
-                         maiores quam, itaque odit deleniti atque officiis ullam excepturi.
-                       </p>  
-              <a href="#" class="btn"> Daha Fazlası</a>                     
+                <h3> İlgi Alanlarım Neler</h3> <br> <br> 
+                <p>
+                    İlgi alanlarımdan bazılarını aşağıya yazdım. Soldaki slider'dan da ilgili videolara gidebilirsiniz <br> 
+                </p>
+                <ol>
+                    <li><strong>Yazılım:</strong> Yazılım dünyası benim için sadece bir meslek değil, aynı zamanda bir tutku. Her gün yeni teknolojileri öğrenmek ve projeler geliştirmek beni heyecanlandırıyor. 
+                        Kod yazmak, sorunları çözmek ve yenilikçi çözümler üretmek benim için bir yaşam tarzı.</li>
+                        <li><strong>Finans:</strong> Finansal analiz ve yatırım konularına ilgi duyuyorum. Ekonomik trendleri takip etmek ve finansal piyasaları anlamak benim için oldukça önemli. 
+                            Yatırım fırsatlarını değerlendirmek, riskleri yönetmek ve uzun vadeli mali hedeflere ulaşmak için sürekli olarak finansal bilgi ve stratejiler üzerine çalışıyorum.</li>
+                            <li><strong>Müzik:</strong> Müzik, benim için sadece bir sanat formu değil, aynı zamanda ruhumun bir parçasıdır. Enstrüman çalmak ve yeni müzik türlerini keşfetmek benim için büyük bir zevktir. Müzik, duygularımı ifade etmenin ve ruhuma huzur vermenin bir yolu olarak benim için çok önemlidir. Yeni melodiler keşfetmek ve ritimlere kapılmak, hayatımı renklendirir ve beni ilhamlandırır.</li>
+
+                </ol>
+                                
             </div>
         </div>
 
