--- a/sapanca.html
+++ b/sapanca.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Mirasımız</title>
+    <title>Sapanca Gölü</title>
     <link rel="stylesheet" href="styles/style.css"/>
 </head>
 <body>
@@ -17,8 +17,8 @@
         </a>
         <nav class = "navbar">
             <a href="index.html"  > Ana Menu </a>
-            <a href="sehir.html" > Şehrim </a>
-            <a href="miras.html" class="active"> Mirasımız </a>
+            <a href="sehir.html" class="active"> Şehrim </a>
+            <a href="miras.html" > Mirasımız </a>
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
@@ -52,74 +52,32 @@
     </header>
     <!-- header bitiiş-->
 
+
+
+    <!-- İlgi Alanlarım başlangıc-->
+    <section class="about" id="about">
+        <h1 class="heading">Sapanca <span>Gölü</span></h1>
+        <div class="row">
+            <div class="image">
+                <img src="images/sapanca.jpg" alt="about" height="500px" width="750px">
+            </div>
+            <div class="content"> 
+                <h3>Sapanca Gölü</h3>
+        <p>Sapanca Gölü, Türkiye'nin Marmara Bölgesi'nde, Sakarya ve Kocaeli illeri arasında yer alan doğal bir göldür. Göller bölgesi içerisinde yer alır ve doğal güzellikleriyle dikkat çeker.</p>
+        <p>Göl, etrafındaki yeşil doğasıyla piknik alanları, yürüyüş ve bisiklet parkurları gibi aktivitelere olanak sağlar. Doğal yaşamın yanı sıra çevresindeki konaklama tesisleri, restoranlar ve kafelerle turistler için ideal bir dinlenme ve eğlence mekanıdır.</p>
+        <p>Sapanca Gölü, aynı zamanda su sporları için de popülerdir. Yelken, kano, su kayağı gibi aktiviteler gölde yapılabilmektedir. Temiz ve berrak suyuyla su altı yaşamını keşfetmek isteyenler için de bir cazibe merkezidir.</p>
+        <p>Sapanca Gölü, özellikle İstanbul'a yakınlığıyla hafta sonu kaçamakları için tercih edilen bir destinasyondur. Doğal güzelliği, temiz havası ve huzurlu ortamıyla ziyaretçilerine unutulmaz anlar yaşatır.</p>
+                                
+            </div>
+        </div>
+
+    </section>
+    <!-- İlgi Alanlarım bitiş-->
+
+   
  
-<!-- Miras başlangıc-->
-<section class="miras" id="miras">
-    <h1 class="heading">Bizim <span>mirasımız</span></h1>
-    <div class="box-container">
-        <div class="box">
-            <div class="box-head">
-                <span class="title"> FUTBOL</span>
-                   <h3>Sakaryaspor</h3> 
-            </div>
-            <div class="image">
-                <img src="images/sakaryaspor.jpg" alt="futbol" height="350" width="400">
-            </div>
-            <div class="box-bottom">
-                <div class="info">
-                    <b class="miras"> 1900 </b>
-                    <span class="miras"> Göl</span>
-                </div>
-                <div class="miras-btn">
-                    <a href="#" > </a>
-                </div>
-
-            </div>
-        </div>
-        <div class="box">
-            <div class="box-head">
-                <span class="title"> FUTBOL</span>
-                <a href="#" class="name"> Sakaryaspor </a>
-            </div>
-            <div class="image">
-                <img src="images/home.png" alt="futbol">
-            </div>
-            <div class="box-bottom">
-                <div class="info">
-                    <b class="miras"> 1900 </b>
-                    <span class="miras"> Göl</span>
-                </div>
-                <div class="miras-btn">
-                    <a href="#" > </a>
-                </div>
-
-            </div>
-        </div>
-        <div class="box">
-            <div class="box-head">
-                <span class="title"> FUTBOL</span>
-                <a href="#" class="name"> Sakaryaspor </a>
-            </div>
-            <div class="image">
-                <img src="images/home.png" alt="futbol">
-            </div>
-            <div class="box-bottom">
-                <div class="info">
-                    <b class="miras"> 1900 </b>
-                    <span class="miras"> Göl</span>
-                </div>
-                <div class="miras-btn">
-                    <a href="#" > </a>
-                </div>
-
-            </div>
-        </div>
-    </div>
 
 
-</section>
-
-<!-- Miras bitiiş-->
 
     <!-- Footer Bölümü -->
     <section class="footer">
@@ -138,8 +96,8 @@
         <div class="link">
             <a href="index.html"  > Ana Menu </a>
             <a href="sehir.html" > Şehrim </a>
-            <a href="miras.html" class="active"> Mirasımız </a>
-            <a href="about.html"  > İlgi Alanlarım </a>
+            <a href="miras.html" > Mirasımız </a>
+            <a href="about.html" class="active" > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
         </div>
