--- a/sehir.html
+++ b/sehir.html
@@ -55,48 +55,83 @@
  <!-- Şehrim-Menu başlangıc-->
  <section class="sehir" id="sehir">
     <h1 class="heading"> Benim <span>Şehrim </span> </h1>
-    <div class="box-container">
-        <div class="box">
-            <div class="box-head">
-                <img src="images/logo.jpg" alt="sehir"/>
-                <span class="sehir-category">Gezi Yeri</span>
-                <h3>Gezi Yerleri</h3>
-            </div>
-            <div class="box-bottom">
-                <a href="#" class="btn">Açıklamaya Git</a>
-            </div>
+    <br>
+  <div class="container col-xs-2 mt-4" style="width: 900px;">
+    <div class="row">
+      <div class="col-md-6">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <a href="sapanca.html"> <img class="d-block w-100" src="images/sapanca.jpg" alt="First slide"></a>
+          <div class="carousel-caption d-none d-md-block">
+            <h4 class="mekan">Sapanca Gölü</h4>
+          </div>
         </div>
-        <div class="box">
-            <div class="box-head">
-                <img src="images/logo.jpg" alt="sehir"/>
-                <span class="sehir-category">Gezi Yeri</span>
-                <h3>Gezi Yerleri</h3>
-            </div>
-            <div class="box-bottom">
-                <a href="#" class="btn">Açıklamaya Git</a>
-            </div>
+        <div class="carousel-item">
+          <a href="tarakli.html"> <img class="d-block w-100" src="images/tarakli.jpg" alt="Second slide"></a>
+          <div class="carousel-caption d-none d-md-block">
+            <h4 class="mekan">Tarakli</h4>
+          </div>
         </div>
-        <div class="box">
-            <div class="box-head">
-                <img src="images/logo.jpg" alt="sehir"/>
-                <span class="sehir-category">Gezi Yeri</span>
-                <h3>Gezi Yerleri</h3>
-            </div>
-            <div class="box-bottom">
-                <a href="#" class="btn">Açıklamaya Git</a>
-            </div>
+        <div class="carousel-item">
+          <a href="kentOrman.html"> <img class="d-block w-100" src="images/orman.jpg" alt="Third slide"></a>
+          <div class="carousel-caption d-none d-md-block">
+            <h4 class="mekan">Sakarya Kent Orman</h4>
+          </div>
         </div>
-        <div class="box">
-            <div class="box-head">
-                <img src="images/logo.jpg" alt="sehir"/>
-                <span class="sehir-category">Gezi Yeri</span>
-                <h3>Gezi Yerleri</h3>
-            </div>
-            <div class="box-bottom">
-                <a href="#" class="btn">Açıklamaya Git</a>
-            </div>
+        <div class="carousel-item">
+          <a href="kanyon.html"> <img class="d-block w-100" src="images/kanyon.jpg" alt="fourth slide" ></a>
+          <div class="carousel-caption d-none d-md-block">
+            <h4 class="mekan">Hendek Kanyonu</h4>
+          </div>
         </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Önceki</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Sonraki</span>
+      </a>
     </div>
+    <br>
+  </div>
+  <div class="container col-xs-2 mt-4" style="max-width: 820px;">
+    <table style="width: 800px;">
+      <tr>
+        <td class="icerik"><strong>Sakarya</strong>, Türkiye'nin Marmara Bölgesi'nde yer alan doğal güzellikleri, tarihi dokusu ve turistik mekanlarıyla dikkat çeken bir şehirdir. Sakarya, yeşil doğası ve modern yaşam tarzıyla bilinir. <br>
+          Sakarya, tarih boyunca çeşitli medeniyetlere ev sahipliği yapmıştır ve bu da şehrin mimarisine ve kültürel dokusuna yansımıştır. </td> 
+          </tr>
+          <tr>
+          <td class="icerik"><br> Şehir, farklı kültürlerin etkileşimiyle zenginleşmiş ve çeşitli etnik ve dini grupların bir arada yaşadığı bir merkez olmuştur. <br>
+          Bu da Sakarya'nın kültürel çeşitliliğini ve zenginliğini artırmıştır. Sakarya'nın tarihi ve kültürel mirası, tarihi konaklar, köprüler ve Osmanlı dönemi eserleriyle gözler önüne serilir.</td>
+          </tr>
+          <tr>
+          <td class="icerik">Sakarya'nın mutfağı da oldukça zengindir ve yöresel lezzetleriyle gastronomi turizmi için önemli bir merkezdir. <br>
+          Özellikle mükemmel tatlar sunan şalgam suyu, manti, Sakarya tandırı gibi yöresel lezzetler Sakarya mutfağının önemli örneklerindendir. </td>
+          </tr>
+          <tr>
+          <td class="icerik"><br> Tarihi, kültürel ve doğal güzellikleriyle Sakarya, Türkiye'nin en önemli turistik merkezlerinden biridir ve her yıl binlerce yerli ve yabancı turisti ağırlar.</td>
+          
+      </tr>
+         
+    </table>
+    <a href="sapanca.html" class="btn" background:#fff> Sapanca</a>   
+      <a href="tarakli.html" class="btn"> Taraklı</a>   
+      <a href="kentOrman.html" class="btn"> Kent Orman</a>   
+      <a href="kanyon.html" class="btn"> Kanyon</a>
+  </div>
+</div>
+</div>
+
 </section>
 
 <!-- Şehrim-Menu bitiiş-->
@@ -135,5 +170,7 @@
 
 
     <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
