d8 : login eklendi / php kaldı

--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,12 @@
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" class="active" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
+            <a href="login.html"> Login</a>
         </nav>
 
         <div class = "buttons">
-            <button id="search-btn">
-                <i class="fas fa-search"> </i>
+            <button id="signin-btn">
+                <i class="fas fa-sign-in"> </i>
             </button>
             <button id="home-btn1">
                 <i class="fas fa-home"> </i>
@@ -71,12 +72,13 @@
                 <input type="email" placeholder="mail"/>
             </div>
 
-            <div class="inputBox">
-                <i class="fas fa-phone"></i>
-                <span> Telefon:</span>
-                <input type="number" placeholder="telefon"/>
+            <div class="inputBox" style="display:flex; align-items: flex-start;">
+                <i class="fas fa-message" style="align-self: flex-start; margin-top:10px;"></i>
+                <span style="align-self: flex-start; margin-top:10px;"> Mesajınız:</span>
+                <input type="text" placeholder="Mesaj " style="height: 400px; width: 300px; align-items: flex-start; "/>
             </div>
             <input type="submit" class="btn" value="İletişime Geç">
+            <input type="submit" class="btn" value="Hepsini sil">
             </form>
    </div> 
 </section>
@@ -92,9 +94,8 @@
         </div>
 
         <div class="share">
-            <a href="#" class="fab fa-github"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="https://github.com/fatihkaratash" class="fab fa-github"></a>
+            <a href="https://www.linkedin.com/in/fatihkaratash" class="fab fa-linkedin"></a>
         </div>
 
         <div class="link">
