--- a/cv.html
+++ b/cv.html
@@ -22,11 +22,12 @@
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" class="active"> Hakkımda </a>
+            <a href="login.html"> Login</a>
         </nav>
 
         <div class = "buttons">
-            <button id="search-btn">
-                <i class="fas fa-search"> </i>
+            <button id="signin-btn">
+                <i class="fas fa-sign-in"> </i>
             </button>
             <button id="home-btn1">
                 <i class="fas fa-home"> </i>
@@ -57,24 +58,25 @@
         <div class="content">
             <h2>Özgeçmiş / CV</h2>
             <ul>
-                <li><strong>Ad:</strong> [Adınız]</li>
-                <li><strong>Soyad:</strong> [Soyadınız]</li>
-                <li><strong>Doğum Tarihi:</strong> [Doğum Tarihi]</li>
-                <li><strong>Telefon:</strong> [Telefon Numarası]</li>
-                <li><strong>E-posta:</strong> [E-posta Adresi]</li>
-                <li><strong>Adres:</strong> [Adresiniz]</li>
-                <li><strong>Eğitim:</strong>
+                <li><strong>Ad:</strong> M. Fatih</li>
+                <li><strong>Soyad:</strong> Karataş</li>
+                <li><strong>Yaş:</strong> 21</li>
+                <li><strong>Doğum Yeri:</strong> Kazakistan</li>
+                <li><strong>E-posta:</strong> <normal>f.karatash.dev@gmail.com</normal></li>
+                <li><strong>Adres:</strong> Sakarya</li>
+                <li><strong>Eğitim</strong>
                     <ul>
-                        <li><strong>Lisans:</strong> [Lisans Programı], [Üniversite Adı], [Mezuniyet Yılı]</li>
-                        <li><strong>Yüksek Lisans:</strong> [Yüksek Lisans Programı], [Üniversite Adı], [Mezuniyet Yılı]</li>
-                        <li><strong>Doktora:</strong> [Doktora Programı], [Üniversite Adı], [Mezuniyet Yılı]</li>
+                       
+                        <li><strong>--Ortaokul:</strong> Mehmet Akif Ersoy Ortaokulu</li>
+                        <li><strong>--Lise:</strong> Bozuyuk Fen Lisesi</li>
+                        <li><strong>--Universite:</strong> Sakarya Üniversitesi</li>
                     </ul>
                 </li>
-                <li><strong>İş Deneyimi:</strong>
+                <li><strong>Software Stacks</strong>
                     <ul>
-                        <li>[İş Deneyimi 1]: [Pozisyon], [Şirket Adı], [Çalışma Tarihi]</li>
-                        <li>[İş Deneyimi 2]: [Pozisyon], [Şirket Adı], [Çalışma Tarihi]</li>
-                        <li>[İş Deneyimi 3]: [Pozisyon], [Şirket Adı], [Çalışma Tarihi]</li>
+                        <li><strong>--Java :</strong> Orta Düzey</li>
+                        <li><strong>--C++ / C# :</strong> Orta Düzey</li>
+                        <li><strong>--Javascript :</strong> Başlangıç Düzey</li>
                     </ul>
                 </li>
             </ul>
@@ -92,9 +94,8 @@
         </div>
 
         <div class="share">
-            <a href="#" class="fab fa-github"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="https://github.com/fatihkaratash" class="fab fa-github"></a>
+            <a href="https://www.linkedin.com/in/fatihkaratash" class="fab fa-linkedin"></a>
         </div>
 
         <div class="link">
