--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
+            <a href="login.html" > Login</a>
         </nav>
 
         <div class = "buttons">
-            <button id="search-btn">
-                <i class="fas fa-search"> </i>
+            <button id="signin-btn">
+                <i class="fas fa-sign-in"> </i>
             </button>
             <button id="home-btn1">
                 <i class="fas fa-home"> </i>
@@ -130,48 +131,12 @@
                        
                     </div>
                     <div class="miras-btn">
-                        <a href="#" > </a>
+                        <a href="miras.html" > </a>
                     </div>
 
                 </div>
             </div>
-            <div class="box">
-                <div class="box-head">
-                    <span class="title"> FUTBOL</span>
-                    <a href="#" class="name"> Sakaryaspor </a>
-                </div>
-                <div class="image">
-                    <img src="images/home.png" alt="futbol">
-                </div>
-                <div class="box-bottom">
-                    <div class="info">
-                        <b class="miras"> 1900 </b>
-                        <span class="miras"> Göl</span>
-                    </div>
-                    <div class="miras-btn">
-                        <a href="#" > </a>
-                    </div>
 
-                </div>
-            </div>
-            <div class="box">
-                <div class="box-head">
-                    <span class="title"> FUTBOL</span>
-                    <a href="#" class="name"> Sakaryaspor </a>
-                </div>
-                <div class="image">
-                    <img src="images/home.png" alt="futbol">
-                </div>
-                <div class="box-bottom">
-                    <div class="info">
-                        <b class="miras"> 1900 </b>
-                        <span class="miras"> Göl</span>
-                    </div>
-                    <div class="miras-btn">
-                        <a href="#" > </a>
-                    </div>
-
-                </div>
             </div>
         </div>
 
@@ -224,12 +189,13 @@
                     <input type="email" placeholder="mail"/>
                 </div>
 
-                <div class="inputBox">
-                    <i class="fas fa-phone"></i>
-                    <span> Telefon:</span>
-                    <input type="number" placeholder="telefon"/>
+                <div class="inputBox" height="500" weight="400">
+                    <i class="fas fa-message"></i>
+                    <span> Mesajınız:</span>
+                    <input type="text" placeholder="Mesaj"/>
                 </div>
                 <input type="submit" class="btn" value="İletişime Geç">
+                <input type="submit" class="btn" value="Hepsini sil">
                 </form>
        </div> 
     </section>
@@ -242,24 +208,24 @@
         <div class="content">
             <h2>Özgeçmiş / CV</h2>
             <ul>
-                <li><strong>Ad:</strong> [Adınız]</li>
-                <li><strong>Soyad:</strong> [Soyadınız]</li>
-                <li><strong>Doğum Tarihi:</strong> [Doğum Tarihi]</li>
-                <li><strong>Telefon:</strong> [Telefon Numarası]</li>
-                <li><strong>E-posta:</strong> [E-posta Adresi]</li>
-                <li><strong>Adres:</strong> [Adresiniz]</li>
-                <li><strong>Eğitim:</strong>
+                <li><strong>Ad:</strong> M. Fatih</li>
+                <li><strong>Soyad:</strong> Karataş</li>
+                <li><strong>Yaş:</strong> 21</li>
+                <li><strong>Doğum Yeri:</strong> Kazakistan</li>
+                <li><strong>E-posta:</strong> <normal>f.karatash.dev@gmail.com</normal></li>
+                <li><strong>Adres:</strong> Sakarya</li>
+                <li><strong>Eğitim</strong>
                     <ul>
-                        <li><strong>Lisans:</strong> [Lisans Programı], [Üniversite Adı], [Mezuniyet Yılı]</li>
-                        <li><strong>Yüksek Lisans:</strong> [Yüksek Lisans Programı], [Üniversite Adı], [Mezuniyet Yılı]</li>
-                        <li><strong>Doktora:</strong> [Doktora Programı], [Üniversite Adı], [Mezuniyet Yılı]</li>
+                        <li><strong>--Ortaokul:</strong> Mehmet Akif Ersoy Ortaokulu</li>
+                        <li><strong>--Lise:</strong> Bozuyuk Fen Lisesi</li>
+                        <li><strong>--Universite:</strong> Sakarya Üniversitesi</li>
                     </ul>
                 </li>
-                <li><strong>İş Deneyimi:</strong>
+                <li><strong>Software Stacks</strong>
                     <ul>
-                        <li>[İş Deneyimi 1]: [Pozisyon], [Şirket Adı], [Çalışma Tarihi]</li>
-                        <li>[İş Deneyimi 2]: [Pozisyon], [Şirket Adı], [Çalışma Tarihi]</li>
-                        <li>[İş Deneyimi 3]: [Pozisyon], [Şirket Adı], [Çalışma Tarihi]</li>
+                        <li><strong>--Java :</strong> Orta Düzey</li>
+                        <li><strong>--C++ / C# :</strong> Orta Düzey</li>
+                        <li><strong>--Javascript :</strong> Başlangıç Düzey</li>
                     </ul>
                 </li>
             </ul>
@@ -279,9 +245,9 @@
         </div>
 
         <div class="share">
-            <a href="#" class="fab fa-github"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="https://github.com/fatihkaratash" class="fab fa-github"></a>
+            
+            <a href="https://www.linkedin.com/in/fatihkaratash" class="fab fa-linkedin"></a>
         </div>
 
         <div class="link">
