--- a/miras.html
+++ b/miras.html
@@ -22,11 +22,12 @@
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
+            <a href="login.html"> Login</a>
         </nav>
 
         <div class = "buttons">
-            <button id="search-btn">
-                <i class="fas fa-search"> </i>
+            <button id="signin-btn">
+                <i class="fas fa-sign-in"> </i>
             </button>
             <button id="home-btn1">
                 <i class="fas fa-home"> </i>
@@ -54,68 +55,23 @@
 
  
 <!-- Miras başlangıc-->
-<section class="miras" id="miras">
-    <h1 class="heading">Bizim <span>mirasımız</span></h1>
-    <div class="box-container">
-        <div class="box">
-            <div class="box-head">
-                <span class="title"> FUTBOL</span>
-                   <h3>Sakaryaspor</h3> 
-            </div>
-            <div class="image">
-                <img src="images/sakaryaspor.jpg" alt="futbol" height="350" width="400">
-            </div>
-            <div class="box-bottom">
-                <div class="info">
-                    <b class="miras"> 1900 </b>
-                    <span class="miras"> Göl</span>
-                </div>
-                <div class="miras-btn">
-                    <a href="#" > </a>
-                </div>
-
-            </div>
+<section class="about" id="about">
+    <h1 class="heading">Bizim <span>Mirasımız</span></h1>
+    <div class="row">
+        <div class="image">
+            <img src="images/sakaryaspor.jpg" alt="about"width="400" height="300" style="max-width: 100%; height: auto;" >
         </div>
-        <div class="box">
-            <div class="box-head">
-                <span class="title"> FUTBOL</span>
-                <a href="#" class="name"> Sakaryaspor </a>
-            </div>
-            <div class="image">
-                <img src="images/home.png" alt="futbol">
-            </div>
-            <div class="box-bottom">
-                <div class="info">
-                    <b class="miras"> 1900 </b>
-                    <span class="miras"> Göl</span>
-                </div>
-                <div class="miras-btn">
-                    <a href="#" > </a>
-                </div>
-
-            </div>
-        </div>
-        <div class="box">
-            <div class="box-head">
-                <span class="title"> FUTBOL</span>
-                <a href="#" class="name"> Sakaryaspor </a>
-            </div>
-            <div class="image">
-                <img src="images/home.png" alt="futbol">
-            </div>
-            <div class="box-bottom">
-                <div class="info">
-                    <b class="miras"> 1900 </b>
-                    <span class="miras"> Göl</span>
-                </div>
-                <div class="miras-btn">
-                    <a href="#" > </a>
-                </div>
-
-            </div>
+        <div class="content"> 
+            <h3> Sakaryaspor</h3> <br> <br> 
+            <p>
+                Sakarya Futbol Kulübü, Türkiye'nin Sakarya şehrinde 1965 yılında kurulan köklü bir spor kulübüdür. Sakaryaspor olarak da bilinen kulüp, Türk futbolunun önemli takımlarından biridir ve şehrinin gururu haline gelmiştir. <br> 
+            </p>
+            <ol>
+                <li>Kulüp tarihinde çeşitli başarılar elde etmiş olan Sakaryaspor, Türkiye futbolunun üst liglerinde mücadele etmiş ve zaman zaman büyük başarılara imza atmıştır. Sakaryaspor'un en parlak dönemi 1980'lerde yaşanmıştır. 1980-1981 sezonunda Türkiye Kupası'nı kazanarak tarihindeki en önemli başarısını elde etmiştir.</li>    
+                <li>Sakarya Futbol Kulübü, şehrinin futbol mirasını ve spor geleneğini yaşatmaya devam ederken, aynı zamanda genç yeteneklerin gelişimine de önem vererek Türk futboluna katkı sağlamaktadır.</li>
+            </ol>             
         </div>
     </div>
-
 
 </section>
 
@@ -130,9 +86,8 @@
         </div>
 
         <div class="share">
-            <a href="#" class="fab fa-github"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="https://github.com/fatihkaratash" class="fab fa-github"></a>
+            <a href="https://www.linkedin.com/in/fatihkaratash" class="fab fa-linkedin"></a>
         </div>
 
         <div class="link">
