--- a/sehir.html
+++ b/sehir.html
@@ -22,12 +22,13 @@
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
+            <a href="login.html"> Login</a>
         </nav>
 
         <div class = "buttons">
-            <button id="search-btn">
-                <i class="fas fa-search"> </i>
-            </button>
+          <button id="signin-btn">
+              <i class="fas fa-sign-in"> </i>
+          </button>
             <button id="home-btn1">
                 <i class="fas fa-home"> </i>
             </button>
@@ -56,7 +57,7 @@
  <section class="sehir" id="sehir">
     <h1 class="heading"> Benim <span>Şehrim </span> </h1>
     <br>
-  <div class="container col-xs-2 mt-4" style="width: 900px;">
+  <div class="container col-xs-2 mt-4" style="max-width: 100%; height: auto;"  >
     <div class="row">
       <div class="col-md-6">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -67,7 +68,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 
       </ol>
-      <div class="carousel-inner">
+      <div class="carousel-inner" ">
         <div class="carousel-item active">
           <a href="sapanca.html"> <img class="d-block w-100" src="images/sapanca.jpg" alt="First slide"></a>
           <div class="carousel-caption d-none d-md-block">
@@ -105,7 +106,7 @@
     <br>
   </div>
   <div class="container col-xs-2 mt-4" style="max-width: 820px;">
-    <table style="width: 800px;">
+    <table style="width: 100%;">
       <tr>
         <td class="icerik"><strong>Sakarya</strong>, Türkiye'nin Marmara Bölgesi'nde yer alan doğal güzellikleri, tarihi dokusu ve turistik mekanlarıyla dikkat çeken bir şehirdir. Sakarya, yeşil doğası ve modern yaşam tarzıyla bilinir. <br>
           Sakarya, tarih boyunca çeşitli medeniyetlere ev sahipliği yapmıştır ve bu da şehrin mimarisine ve kültürel dokusuna yansımıştır. </td> 
@@ -147,9 +148,8 @@
         </div>
 
         <div class="share">
-            <a href="#" class="fab fa-github"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+          <a href="https://github.com/fatihkaratash" class="fab fa-github"></a>
+          <a href="https://www.linkedin.com/in/fatihkaratash" class="fab fa-linkedin"></a>
         </div>
 
         <div class="link">
