--- a/tarakli.html
+++ b/tarakli.html
@@ -22,11 +22,12 @@
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
+            <a href="login.html"> Login</a>
         </nav>
 
         <div class = "buttons">
-            <button id="search-btn">
-                <i class="fas fa-search"> </i>
+            <button id="signin-btn">
+                <i class="fas fa-sign-in"> </i>
             </button>
             <button id="home-btn1">
                 <i class="fas fa-home"> </i>
@@ -88,9 +89,8 @@
         </div>
 
         <div class="share">
-            <a href="#" class="fab fa-github"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-linkedin"></a>
+            <a href="https://github.com/fatihkaratash" class="fab fa-github"></a>
+            <a href="https://www.linkedin.com/in/fatihkaratash" class="fab fa-linkedin"></a>
         </div>
 
         <div class="link">
