--- a/about.html
+++ b/about.html
@@ -37,15 +37,6 @@
             </button>
         </div>
 
-        <div class="search-form">
-            <input 
-            type="text"
-            class="search-input"
-            id="search-box"
-            placeholder="arama yapınız"/>
-            <i class="fas fa-search"></i>
-        </div>
-
         <div class="home-button">
 
         </div>
@@ -60,7 +51,10 @@
         <h1 class="heading">İlgi <span>Alanlarım</span></h1>
         <div class="row">
             <div class="image">
-                <img src="images/hobby.jpg" alt="about">
+               
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/PHe0bXAIuk0?si=IWAELlqtL8lzs-iO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ohFtQIPqGSo?si=DZD2c5LFk0U3gxcS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="content"> 
                 <h3> İlgi Alanlarım Neler</h3> <br> <br> 
