--- a/login.html
+++ b/login.html
@@ -72,6 +72,7 @@
                 <input type="email" placeholder="mail"/>
             </div>
             <input type="submit" class="btn" value="GİRİŞ YAP" >
+            <br><small style="color:#fff; font-size:larger; text-transform:lowercase" id="giris" >Email: B211210088@sakarya.edu.tr | şifre:B211210088</small>
             </form>
    </div> 
 </section>
