--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
         </a>
         <nav class = "navbar">
             <a href="index.html"  > Ana Menu </a>
-            <a href="sehir.html" > Şehrim </a>
-            <a href="miras.html" > Mirasımız </a>
+            <a href="sehir.html" > Şehir </a>
+            <a href="miras.html" > Miras </a>
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" class="active" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
