--- a/sehir.html
+++ b/sehir.html
@@ -17,8 +17,8 @@
         </a>
         <nav class = "navbar">
             <a href="index.html"  > Ana Menu </a>
-            <a href="sehir.html" class="active" > Şehrim </a>
-            <a href="miras.html" > Mirasımız </a>
+            <a href="sehir.html" class="active" > Şehir </a>
+            <a href="miras.html" > Miras </a>
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
@@ -55,7 +55,7 @@
 
  <!-- Şehrim-Menu başlangıc-->
  <section class="sehir" id="sehir">
-    <h1 class="heading"> Benim <span>Şehrim </span> </h1>
+    <h1 class="heading"> Sakarya <span>Şehri </span> </h1>
     <br>
   <div class="container col-xs-2 mt-4" style="max-width: 100%; height: auto;"  >
     <div class="row">
