--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </a>
         <nav class = "navbar">
             <a href="index.html" class="active" > Ana Menu </a>
-            <a href="sehir.html" > Şehrim </a>
-            <a href="miras.html" > Mirasımız </a>
+            <a href="sehir.html" > Şehir </a>
+            <a href="miras.html" > Miras </a>
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
@@ -66,7 +66,7 @@
 
     <!-- Şehrim-Menu başlangıc-->
     <section class="sehir" id="sehir">
-        <h1 class="heading"> Benim <span>Şehrim </span> </h1>
+        <h1 class="heading"> Sakarya <span>Şehri </span> </h1>
         <div class="box-container">
             <div class="box">
                 <div class="box-head">
@@ -115,7 +115,7 @@
 
     <!-- Miras başlangıc-->
     <section class="miras" id="miras">
-        <h1 class="heading">Bizim <span>mirasımız</span></h1>
+        <h1 class="heading">Sakarya <span> Mirası</span></h1>
         <div class="box-container">
             <div class="box">
                 <div class="box-head">
