--- a/miras.html
+++ b/miras.html
@@ -17,8 +17,8 @@
         </a>
         <nav class = "navbar">
             <a href="index.html"  > Ana Menu </a>
-            <a href="sehir.html" > Şehrim </a>
-            <a href="miras.html" class="active"> Mirasımız </a>
+            <a href="sehir.html" > Şehir </a>
+            <a href="miras.html" class="active"> Miras </a>
             <a href="about.html"  > İlgi Alanlarım </a>
             <a href="contact.html" > İletişim </a>
             <a href="cv.html" > Hakkımda </a>
@@ -56,7 +56,7 @@
  
 <!-- Miras başlangıc-->
 <section class="about" id="about">
-    <h1 class="heading">Bizim <span>Mirasımız</span></h1>
+    <h1 class="heading">Sakarya <span>Mirası</span></h1>
     <div class="row">
         <div class="image">
             <img src="images/sakaryaspor.jpg" alt="about"width="400" height="300" style="max-width: 100%; height: auto;" >
