index-contact düzeltildi

--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
                     <span> Mesajınız:</span>
                     <input type="text" placeholder="Mesaj"/>
                 </div>
-                <input type="submit" class="btn" value="İletişime Geç">
-                <input type="submit" class="btn" value="Hepsini sil">
+                <button class="btn" type="submit" name="gonder" id="sub">Gönder</button>
+                <button class="btn" type="reset" id="submit" name="submit" value="Reset"
+                    onclick="check()">Temizle</button>
                 </form>
        </div> 
     </section>
