--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <span> Mesajınız:</span>
                     <input type="text" placeholder="Mesaj"/>
                 </div>
-                <button class="btn" type="submit" name="gonder" id="sub">Gönder</button>
+                <a href="contact.html" class="btn">İletişime Git</a>
                 <button class="btn" type="reset" id="submit" name="submit" value="Reset"
                     onclick="check()">Temizle</button>
                 </form>
